FLY wire David/force-app/main/default/objects/RFP_Bid__c/RFP_Bid__c.object-meta.xml
<CustomObject>
    <description>Capture RFP Bid Questionnaire via Flow</description>
    <label>RFP Bid</label>
    <nameField>
        <displayFormat>Bid-{0000}</displayFormat>
        <label>RFP Bid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>