FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Account</description>
    <inlineHelpText>Link to Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFP Bids</relationshipLabel>
    <relationshipName>RFP_Bids</relationshipName>
    <type>Lookup</type>
</CustomField>