FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <description>Based on responses from Questionnaire filled in by Flow</description>
    <inlineHelpText>Based on responses from Questionnaire filled in by Flow</inlineHelpText>
    <label>Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>