FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Mater detail Field link from Bid to Opportunity</description>
    <inlineHelpText>Link from Bid to Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RFP Bids</relationshipLabel>
    <relationshipName>RFP_Bids</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>