FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <defaultValue>&quot;Is Flywire the incumbent, or if not, did we meet with the key decision makers before the RFP was issued?&quot;</defaultValue>
    <description>Question 1</description>
    <inlineHelpText>Question 1</inlineHelpText>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>