FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Q1_Response__c.field-meta.xml
<CustomField>
    <fullName>Q1_Response__c</fullName>
    <description>Response to Question in Q1 Field</description>
    <inlineHelpText>Response to Question in Q1 Field</inlineHelpText>
    <label>Q1 Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>