FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <defaultValue>&quot;Has the client already seen our solution and/or verified their interest in it?&quot;</defaultValue>
    <description>Question 2 from Questionnaire fin Flow</description>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>