FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Q2_Response__c.field-meta.xml
<CustomField>
    <fullName>Q2_Response__c</fullName>
    <description>Response from Questionnaire</description>
    <label>Q2 Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>