FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <defaultValue>&quot;Can Flywire meet all the RFP requirements, or if not, do we have a strategy in place to fill any gaps?&quot;</defaultValue>
    <description>Question three from Flow Questionnaire.</description>
    <inlineHelpText>Question three from Flow Questionnaire.</inlineHelpText>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>