FLY wire David/force-app/main/default/objects/RFP_Bid__c/fields/Q3_Response__c.field-meta.xml
<CustomField>
    <fullName>Q3_Response__c</fullName>
    <description>Question 3 Response</description>
    <label>Q3 Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>